# rustodont

./: .env  .gitignore  Cargo.toml  Dockerfile
migrations/: 20230729071224_initial.sql
src/: main.rs  todonts.rs
